--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
   "license": "ISC",
   "dependencies": {
     "config": "^3.3.7",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "mongoose": "^6.3.3"
   },
   "devDependencies": {
     "concurrently": "^7.0.0",
