--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "http-proxy-middleware": "^2.0.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.3.1",
+    "react-calendar": "^3.7.0",
     "react-dom": "^17.0.2",
+    "react-qty-picker": "^1.0.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
