--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "http-proxy-middleware": "^2.0.3",
+    "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.3.1",
     "react-calendar": "^3.7.0",
