--- a/server/package.json
+++ b/server/package.json
@@ -13,11 +13,14 @@
     "react",
     "node"
   ],
-  "author": "Liubomyr Pidverbetskyi <plybomur720@gmail.com>",
+  "author": "...",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "config": "^3.3.7",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3"
   },
   "devDependencies": {
