--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "boom": "^7.3.0",
     "config": "^3.3.7",
     "cors": "^2.8.5",
     "express": "^4.17.3",
